Bug 377263, bug 377399 - patternContentUnits='objectBoundingBox' not translated correctly. r=tor,sr=roc